# nix-zed-extensions

./: Cargo.toml  README.md  config.toml  extensions.json  flake.nix  tombi.toml  typos.toml
.github/workflows/: sync.yml  test.yml
.zed/: settings.json
modules/home-manager/: default.nix
overlays/: cross.nix  default.nix  packages.nix
pkgs/buildZedExtension/: default.nix
pkgs/buildZedGrammar/: default.nix
pkgs/buildZedRustExtension/: default.nix
pkgs/nix-zed-extensions/: default.nix
pkgs/wasi-libc/: default.nix
pkgs/wasi-libc/patches/: predefined-macros.patch  shared.patch  undefined-symbols.patch
pkgs/wasi-sdk/: default.nix
pkgs/wasi-sdk/patches/: version.patch  wasm-component-ld.patch
pkgs/wasip1-component-adapter/: default.nix
pkgs/wasm-component-ld/: default.nix
scripts/: test.sh
src/: api.rs  config.rs  copy.rs  main.rs  manifest.rs  output.rs  registry.rs  sync.rs  wasm.rs
src/sync/: grammar.rs  rust.rs
