# https://doc.rust-lang.org/cargo/reference/manifest.html
[package]
name = "nix-zed-extensions"
version = "0.0.0"
authors = ["Cathal Mullan <contact@cathal.dev>"]
edition = "2024"
rust-version = "1.85"
repository = "https://github.com/DuskSystems/nix-zed-extensions"
license = "GPL-3.0-or-later"
publish = false

[dependencies]
# Async
tokio = { version = "1.44", features = ["full"] }
futures = "0.3"

# WASM
wasmparser = "0.229"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

# Errors
anyhow = "1.0"
