# https://doc.rust-lang.org/cargo/reference/manifest.html
[package]
name = "nix-zed-extensions"
version = "0.0.0"
authors = ["Cathal Mullan <contact@cathal.dev>"]
edition = "2024"
rust-version = "1.86"
repository = "https://github.com/DuskSystems/nix-zed-extensions"
license = "GPL-3.0-or-later"
publish = false

# https://doc.rust-lang.org/rustc/lints/groups.html
[lints.rust]
unsafe_code = "forbid"

unused = { level = "deny", priority = -2 }
future-incompatible = { level = "deny", priority = -1 }
keyword-idents = { level = "deny", priority = -1 }
let-underscore = { level = "deny", priority = -1 }
nonstandard-style = { level = "deny", priority = -1 }
refining-impl-trait = { level = "deny", priority = -1 }
rust-2018-compatibility = { level = "deny", priority = -1 }
rust-2018-idioms = { level = "deny", priority = -1 }
rust-2021-compatibility = { level = "deny", priority = -1 }
rust-2024-compatibility = { level = "deny", priority = -1 }

# https://rust-lang.github.io/rust-clippy/master/index.html
[lints.clippy]
cargo = { level = "deny", priority = -1 }
complexity = { level = "deny", priority = -1 }
correctness = { level = "deny", priority = -1 }
nursery = { level = "deny", priority = -1 }
pedantic = { level = "deny", priority = -1 }
perf = { level = "deny", priority = -1 }
style = { level = "deny", priority = -1 }
suspicious = { level = "deny", priority = -1 }

# Personal Preferences
clone_on_ref_ptr = "deny"
cognitive_complexity = "allow"
module_name_repetitions = "allow"
option_if_let_else = "allow"
str_to_string = "deny"
too_many_lines = "allow"

# TODO
multiple_crate_versions = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"

[dependencies]
# Async
tokio = { version = "1.47", default-features = false, features = [
  "fs",
  "macros",
  "process",
  "rt-multi-thread",
  "sync",
] }

# Cargo
cargo-lock = "10.1"

# WASM
wasmparser = { version = "0.240", default-features = false, features = [
  "component-model",
] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.9"

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

# Errors
anyhow = "1.0"
